--- a/src/views/home.css
+++ b/src/views/home.css
@@ -310,6 +310,11 @@ h1 {
     width: 49%;
 }
 
+.mail {
+    text-decoration: underline;
+    color: blue;
+}
+
 
 @media only screen and (max-width: 600px) {
     .toppageMain {
